@@ -2,54 +2,47 @@ package com.backend.app.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
 public class SecurityConfig {
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // --- Step 1: Disable CSRF (you already had this, it's good) ---
                 .csrf(csrf -> csrf.disable())
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> {
-                    // --- Public Endpoints ---
-                    auth.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                            .requestMatchers("/api/auth/**").permitAll()
-                            .requestMatchers(HttpMethod.GET, "/api/products/**").permitAll()
-                            .requestMatchers(HttpMethod.POST, "/api/newsletter/subscribe").permitAll()
-                            .requestMatchers(HttpMethod.GET, "/api/newsletter/subscribers").hasRole("ADMIN")
-                            .requestMatchers("/api/admin/**").hasRole("ADMIN") // General rule for other admin endpoints
-                            .anyRequest().authenticated();
-                });
+
+                // --- Step 2: Configure CORS to allow requests from your frontend ---
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // --- Step 3: THE MOST IMPORTANT CHANGE ---
+                // Allow ALL requests to ALL endpoints without any authentication.
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/**").permitAll() // <-- This line permits everything
+                );
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*")); // For production, be more specific, e.g., "Authorization", "Content-Type"
-        // configuration.setExposedHeaders(Arrays.asList("*")); // Usually not needed unless you have custom headers to expose
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // Apply this CORS configuration to all paths
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
